--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,23 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" href="/favicon.ico" />
         <title>{% block title %}Welcome!{% endblock %}</title>
+        {% block head_css %}
+            <link rel="stylesheet" href="/bootstrap.min.css">
+        {% endblock %}
+        {% block head_js %}
+            <script src="/jquery-3.5.1.slim.min.js"></script>
+            <script src="/bootstrap.min.js"></script>
+            <script src="/popper.min.js"></script>
+        {% endblock %}
         {% block stylesheets %}{% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
+    <body class="d-flex flex-column align-items-center">
+        <h1 class="my-5">Hello dev full stack</h1>
+        <div class="container">
+            {% block body %}{% endblock %}
+        </div>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
